# ScholarForge

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  LICENSE  PRD.md  PROJECT_STATUS_REPORT.md  README.md  SECURITY.md  TASKS.md  UI_DESIGN_GUIDELINES.md  check-status.bat  docker-compose.prod.yml  docker-compose.yml  setup-config.bat  start-advanced.bat  start-all-ascii.bat  start-all.bat  start.ps1  stop-all.bat  文献系统概念设计.md  系统架构图.md
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.service  alembic.ini  pyproject.toml  pytest.ini  run.py  test_services.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20250308_0001_initial_schema.py
backend/gateway/: main.py
backend/scripts/: init_database.py  seed_demo_data.py
backend/services/: __init__.py  export_service.py
backend/services/ai/: __init__.py  conversation_models.py  conversation_service.py  literature_reading_service.py  llm_provider.py  llm_provider_v2.py  main.py  model_gateway_routes.py  multi_hop_qa.py  multimodal_routes.py  rag_engine.py  research_qa.py  routes.py  schemas.py  stepfun_client.py  terminology.py  (+6 more)
backend/shared/: __init__.py  audit_middleware.py  cache.py  config.py  csrf_middleware.py  database.py  dependencies.py  exceptions.py  middleware.py  responses.py  security.py  tasks.py
backend/tests/: conftest.py  test_ai_service.py  test_article_service.py  test_chat_api.py  test_conversation.py  test_integration.py  test_paper_service.py  test_user_service.py  test_user_service_v2.py
(+645 files in other folders)
