[project]
name = "scholarforge-backend"
version = "0.1.0"
description = "ScholarForge (学术锻造) - 一站式智能学术研究协作平台后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "elasticsearch>=8.12.0",
    "neo4j>=5.17.0",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "aiohttp>=3.9.3",
    "celery>=5.3.6",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "sentence-transformers>=2.3.1",
    "websockets>=12.0",
    "y-py>=0.6.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
